fixed dark mode support on account page

--- a/frontend/src/components/AccountPage/AccountPage.module.css
+++ b/frontend/src/components/AccountPage/AccountPage.module.css
@@ -1,9 +1,15 @@
-.wrapper {
+.wrapperLight {
   display: flex;
   justify-content: center;
 }
+.wrapperDark {
+  display: flex;
+  justify-content: center;
+  background-color: #121212;
+}
 .inner {
   width: 50rem;
+  justify-content: center;
 }
 
 .darkModeToggles {
